--- a/source/index.html
+++ b/source/index.html
@@ -13,9 +13,7 @@
 
   <body>
     <div>
-      <ngc-main>
-        <main class="container mt4" ui-view></main>
-      </ngc-main>
+      <div>Hello World!</div>
     </div>
     <script src="/node_modules/systemjs/dist/system.js"></script>
     <script src="/system.config.js"></script>
