--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <div>
-      <div>Hello World!</div>
+      <ngc-main></ngc-main>
     </div>
     <script src="/node_modules/systemjs/dist/system.js"></script>
     <script src="/system.config.js"></script>
