--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,9 @@
 
   <body>
     <div>
-      <ngc-main></ngc-main>
+      <ngc-main>
+        <div ui-view></div>
+      </ngc-main>
     </div>
     <script src="/node_modules/systemjs/dist/system.js"></script>
     <script src="/system.config.js"></script>
