creating base branch

--- a/app/index.html
+++ b/app/index.html
@@ -8,14 +8,7 @@
 
     <title>NgCourse-Next Demo Application</title>
   </head>
-
   <body>
-    <div>
-      <ngc-main>
-        <main class="container mt4" ui-view></main>
-      </ngc-main>
-    </div>
-
+    <div>Hello World!</div>
   </body>
-
 </html>
