--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,6 @@
     <title>NgCourse-Next Demo Application</title>
   </head>
   <body>
-    <div>Hello World!</div>
+    <ngc-main></ngc-main>
   </body>
 </html>
