ng-forward configuration - Added required dependencies in package.json (@reactivex needed to be updated to alpha.10 to work with ng-forward) - Refactored task-component to be ang2 like component, view is still the same - Bootstrapped application through ng-forward that includes the new bundle (module) for refactored components - Created root component so the app can be bootstrapped with providers in ang1 pattern.

--- a/app/index.html
+++ b/app/index.html
@@ -10,12 +10,7 @@
   </head>
 
   <body>
-    <div>
-      <ngc-main>
-        <main class="container mt4" ui-view></main>
-      </ngc-main>
-    </div>
-
+    <root></root>
   </body>
 
 </html>
